[package]
name = "pinion"
version = "0.2.0"
authors = ["benki"]
edition = "2021"

[dependencies]
anyhow = "1.0"
image = "0.24"

[dependencies.windows]
version = "0.43"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
]


[profile.release]
codegen-units = 1
lto = true
panic = "abort"