[package]
name = "pinion"
version = "0.2.1"
authors = ["benki"]
edition = "2021"

[dependencies]
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = [
    "jpeg",
    "gif",
    "bmp",
    "png",
]

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
]

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
lto = true
panic = "abort"